# avangard-os

./: README.md
main/: .gitignore
main/Initializer/: CMakeLists.txt  bochs.config  link.ld
main/Initializer/arch/x86_64/: Exceptions.cpp  IOports.cpp  Initializer.cpp  Interrupts.cpp  Paging.cpp  TerminalInitializer.cpp
main/Initializer/arch/x86_64/asm/: boot.asm  interrupts.asm
main/Initializer/image/iso/boot/grub/: grub.cfg
main/Initializer/include/arch/x86_64/: exceptions.h  init.h  interrupts.h  ioports.h  paging.h
main/Initializer/include/arch/x86_64/asm/: cpuid.inc.asm  longmode.inc.asm  mboot.inc.asm  mboot2hdr.inc.asm
main/Initializer/include/std/: format.h  log.h  memory.h  streams.h  strings.h  types.h
main/Initializer/include/sys/: arch_init.h  ioports.h  phys_mem.h  system.h
main/Initializer/include/util/: bochs.h
main/Initializer/init/: Init.cpp  Multiboot.cpp
main/Initializer/std/: IOStreams.cpp  Memory.cpp  StringFormatter.cpp  Strings.cpp
main/Initializer/system/: PhysMemory.cpp  Runtime.cpp  System.cpp
toolchains/: toolchain-pc-x86_64.cmake
